...
            tooltip: 'Keyboard shortcuts',
            onPressed: () =>
                pushDialogRoute(context, RoutePaths.keyboardShortcutsDialog),
          ),
          IconButton(
            icon: const Icon(Icons.info_outline, size: 18),
            tooltip: 'About',
            onPressed: () => pushDialogRoute(context, RoutePaths.aboutDialog),
          ),
        ],
      ),
      body: Column(
        children: <Widget>[
...
